[tool.poetry]
name = "agent-steps"
version = "0.1.0"
description = "LLM agent workflows without a DSL"
authors = ["Dave Nachman <dave.nachman.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.20.3"
pydantic = "^2.9.2"
litellm = "^1.47.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "W"]
ignore = ["E501"]